objects/X9902Client__c.object
<CustomObject>
    <fields>
        <fullName>ClientOutcome__c</fullName>
        <label>Client Outcome</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>14</fullName>
                    <label>Households that received one-on-one counseling that also received education services.</label>
                </value>
                <value>
                    <fullName>15</fullName>
                    <label>Households that received information on fair housing, fair lending and/or accessibility rights.</label>
                </value>
                <value>
                    <fullName>16</fullName>
                    <label>Households for whom counselor developed a budget customized to a client’s current situation.</label>
                </value>
                <value>
                    <fullName>17</fullName>
                    <label>Households that improved their financial capacity (e.g. increased discretionary income, decreased debt load, increased savings, increased credit score, etc.) after receiving Housing Counseling Services.</label>
                </value>
                <value>
                    <fullName>18</fullName>
                    <label>Households that gained access to resources to help improve their housing situation (e.g. down payment assistance, rental assistance, utility assistance, etc.) after receiving Housing Counseling Services.</label>
                </value>
                <value>
                    <fullName>19</fullName>
                    <label>Households that gained access to non-housing resources (e.g. social service programs, legal services, public benefits such as Social Security or Medicaid, etc.) after receiving Housing Counseling Services</label>
                </value>
                <value>
                    <fullName>20</fullName>
                    <label>Homeless or potentially homeless households that obtained temporary or permanent housing after receiving Housing Counseling Services.</label>
                </value>
                <value>
                    <fullName>21</fullName>
                    <label>Households gained access to disaster recovery non-housing resources after receiving Housing Counseling Services (e.g. Red Cross/FEMA relief items, legal services, assistance).</label>
                </value>
                <value>
                    <fullName>22</fullName>
                    <label>Households obtained disaster recovery housing resources after receiving Housing Counseling Services (e.g. temporary shelter, homeowner rehab, relocation, etc.).</label>
                </value>
                <value>
                    <fullName>23</fullName>
                    <label>Households for whom counselor developed or updated an emergency preparedness plan.</label>
                </value>
                <value>
                    <fullName>24</fullName>
                    <label>Household that received rental counseling and avoided eviction after receiving Housing Counseling Services.</label>
                </value>
                <value>
                    <fullName>25</fullName>
                    <label>Households that received rental counseling and improved living conditions after receiving Housing Counseling Services.</label>
                </value>
                <value>
                    <fullName>26</fullName>
                    <label>Households that received pre-purchase/homebuying counseling and purchased housing after receiving Housing Counseling Services.</label>
                </value>
                <value>
                    <fullName>27</fullName>
                    <label>Households that received reverse mortgage counseling and obtained a Home Equity Conversion Mortgage (HECM) after receiving Housing Counseling Services.</label>
                </value>
                <value>
                    <fullName>28</fullName>
                    <label>Households that received non-delinquency post-purchase counseling that were able to improve home conditions or home affordability after receiving Housing Counseling Services.</label>
                </value>
                <value>
                    <fullName>29</fullName>
                    <label>Households that prevented or resolved a forward mortgage default after receiving Housing Counseling Services.</label>
                </value>
                <value>
                    <fullName>30</fullName>
                    <label>Households that prevented or resolved a reverse mortgage default after receiving Housing Counseling Services.</label>
                </value>
                <value>
                    <fullName>31</fullName>
                    <label>Households that received a forward mortgage modification and remained current in their modified mortgage after receiving Housing Counseling Services.</label>
                </value>
                <value>
                    <fullName>32</fullName>
                    <label>Households that received a forward mortgage modification and improved their financial capacity after receiving Housing counseling Services.</label>
                </value>
                <value>
                    <fullName>a. Households that received one-on-one counseling that also received education services.</fullName>
                    <isActive>false</isActive>
                    <label>a. Households that received one-on-one counseling that also received education services.</label>
                </value>
                <value>
                    <fullName>b. Households that received information on fair housing, fair lending and/or accessibility rights.</fullName>
                    <isActive>false</isActive>
                    <label>b. Households that received information on fair housing, fair lending and/or accessibility rights.</label>
                </value>
                <value>
                    <fullName>c. Households for whom counselor developed a budget customized to a client’s current situation.</fullName>
                    <isActive>false</isActive>
                    <label>c. Households for whom counselor developed a budget customized to a client’s current situation.</label>
                </value>
                <value>
                    <fullName>d. Households that improved their financial capacity (e.g. increased discretionary income, decreased debt load, increased savings, increased credit score, etc.) after receiving Housing Counseling Services.</fullName>
                    <isActive>false</isActive>
                    <label>d. Households that improved their financial capacity (e.g. increased discretionary income, decreased debt load, increased savings, increased credit score, etc.) after receiving Housing Counseling Services.</label>
                </value>
                <value>
                    <fullName>e. Households that gained access to resources to help improve their housing situation (e.g. down payment assistance, rental assistance, utility assistance, etc.) after receiving Housing Counseling Services.</fullName>
                    <isActive>false</isActive>
                    <label>e. Households that gained access to resources to help improve their housing situation (e.g. down payment assistance, rental assistance, utility assistance, etc.) after receiving Housing Counseling Services.</label>
                </value>
                <value>
                    <fullName>f. Households that gained access to non-housing resources (e.g. social service programs, legal services, public benefits such as Social Security or Medicaid, etc.) after receiving Housing Counseling Services.</fullName>
                    <isActive>false</isActive>
                    <label>f. Households that gained access to non-housing resources (e.g. social service programs, legal services, public benefits such as Social Security or Medicaid, etc.) after receiving Housing Counseling Services.</label>
                </value>
                <value>
                    <fullName>g. Homeless or potentially homeless households that obtained temporary or permanent housing after receiving Housing Counseling Services.</fullName>
                    <isActive>false</isActive>
                    <label>g. Homeless or potentially homeless households that obtained temporary or permanent housing after receiving Housing Counseling Services.</label>
                </value>
                <value>
                    <fullName>h. Households gained access to disaster recovery non-housing resources after receiving Housing Counseling Services (e.g. Red Cross/FEMA relief items, legal services, assistance). applying for benefits, etc.)</fullName>
                    <isActive>false</isActive>
                    <label>h. Households gained access to disaster recovery non-housing resources after receiving Housing Counseling Services (e.g. Red Cross/FEMA relief items, legal services, assistance). applying for benefits, etc.)</label>
                </value>
                <value>
                    <fullName>i. Households obtained disaster recovery housing resources after receiving Housing Counseling Services (e.g. temporary shelter, homeowner rehab, relocation, etc.).</fullName>
                    <isActive>false</isActive>
                    <label>i. Households obtained disaster recovery housing resources after receiving Housing Counseling Services (e.g. temporary shelter, homeowner rehab, relocation, etc.).</label>
                </value>
                <value>
                    <fullName>j. Households for whom counselor developed or updated an emergency preparedness plan.</fullName>
                    <isActive>false</isActive>
                    <label>j. Households for whom counselor developed or updated an emergency preparedness plan.</label>
                </value>
                <value>
                    <fullName>k. Household that received rental counseling and avoided eviction after receiving Housing Counseling Services.</fullName>
                    <isActive>false</isActive>
                    <label>k. Household that received rental counseling and avoided eviction after receiving Housing Counseling Services.</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClientPredatoryLending__c</fullName>
        <description>Indicates whether the client is affected by predatory lending practices.</description>
        <inlineHelpText>Select &quot;Yes&quot; if the client is affected by predatory lending practices, otherwise select &quot;No&quot;.</inlineHelpText>
        <label>Client Predatory Lending</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>N</fullName>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClientPurposeofVisit__c</fullName>
        <description>The purpose of the client&apos;s visit or interaction with the organization.</description>
        <inlineHelpText>Specify the purpose of the client&apos;s visit or interaction with the organization</inlineHelpText>
        <label>Client Purpose of Visit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>12</fullName>
                    <label>Homeless Assistance</label>
                </value>
                <value>
                    <fullName>14</fullName>
                    <label>Pre-purchase/Homebuying</label>
                </value>
                <value>
                    <fullName>13</fullName>
                    <label>Rental Topics</label>
                </value>
                <value>
                    <fullName>15</fullName>
                    <label>Non-Delinquency Post-Purchase</label>
                </value>
                <value>
                    <fullName>16</fullName>
                    <label>Reverse Mortgage</label>
                </value>
                <value>
                    <fullName>17</fullName>
                    <label>Resolving or Preventing Forward Mortgage Delinquency or Default</label>
                </value>
                <value>
                    <fullName>18</fullName>
                    <label>Resolving or Preventing Reverse Mortgage Delinquency or Default</label>
                </value>
                <value>
                    <fullName>19</fullName>
                    <label>Disaster Preparedness Assistance</label>
                </value>
                <value>
                    <fullName>20</fullName>
                    <label>Disaster Recovery Assistance</label>
                </value>
                <value>
                    <fullName>Not HUD-Reportable</fullName>
                </value>
                <value>
                    <fullName>Prepurchase/Homebuying</fullName>
                    <isActive>false</isActive>
                    <label>Prepurchase/Homebuying</label>
                </value>
                <value>
                    <fullName>Rehab InquiryResolving or Preventing Reverse Mortgage Delinquency or Default</fullName>
                    <isActive>false</isActive>
                    <label>Rehab InquiryResolving or Preventing Reverse Mortgage Delinquency or Default</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClientRaceID__c</fullName>
        <description>The identification code or label representing the client&apos;s race.</description>
        <inlineHelpText>Enter the identification code or label representing the client&apos;s race.</inlineHelpText>
        <label>Client Race ID</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>13</fullName>
                    <label>American Indian/Alaskan Native</label>
                </value>
                <value>
                    <fullName>14</fullName>
                    <label>Asian</label>
                </value>
                <value>
                    <fullName>15</fullName>
                    <label>Black or African American</label>
                </value>
                <value>
                    <fullName>16</fullName>
                    <label>Native Hawaiian or Other Pacific Islander</label>
                </value>
                <value>
                    <fullName>17</fullName>
                    <label>White</label>
                </value>
                <value>
                    <fullName>18</fullName>
                    <label>More than one race</label>
                </value>
                <value>
                    <fullName>19</fullName>
                    <label>Chose not to respond</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClientReferredBy__c</fullName>
        <description>Indicates the source or entity that referred the client for counseling.</description>
        <inlineHelpText>Specify the source or entity that referred the client for counseling</inlineHelpText>
        <label>Client Referred By</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2</fullName>
                    <label>HUD Outreach</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Agency Outreach</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Another Person</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Lender</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <label>Another Agency</label>
                </value>
                <value>
                    <fullName>7</fullName>
                    <label>Real Estate Agent</label>
                </value>
                <value>
                    <fullName>8</fullName>
                    <label>Other</label>
                </value>
                <value>
                    <fullName>9</fullName>
                    <label>N/A</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClientRuralAreaStatus__c</fullName>
        <description>Indicates whether the client lives in a rural area.</description>
        <inlineHelpText>Select &quot;Yes&quot; if the client lives in a rural area, otherwise select &quot;No&quot;.</inlineHelpText>
        <label>Client Rural Area Status </label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Lives in a rural area</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Does not live in a rural area</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Chose not to respond</label>
                </value>
                <value>
                    <fullName>N</fullName>
                    <isActive>false</isActive>
                    <label>N</label>
                </value>
                <value>
                    <fullName>Y</fullName>
                    <isActive>false</isActive>
                    <label>Y</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClientSalesContractSigned__c</fullName>
        <description>Indicates whether the client has signed a sales contract.</description>
        <inlineHelpText>Select &quot;Yes&quot; if the client has signed a sales contract, otherwise select &quot;No&quot;.</inlineHelpText>
        <label>Client Sales Contract Signed </label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ClientSecondLoanExists__c</fullName>
        <description>Indicates whether a second loan exists for the client.</description>
        <inlineHelpText>Select &quot;Yes&quot; if a second loan exists for the client, otherwise select &quot;No&quot;.</inlineHelpText>
        <label>Client Second Loan Exists</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>N</fullName>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClientSessionDuration__c</fullName>
        <description>The duration of the client&apos;s counseling session.</description>
        <inlineHelpText>Enter the duration of the client&apos;s counseling session. This could be specified in minutes or hours.</inlineHelpText>
        <label>Client Session Duration </label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ClientState__c</fullName>
        <label>Client State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2</fullName>
                    <label>AK</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>AL</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>AR</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>AS</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <label>AZ</label>
                </value>
                <value>
                    <fullName>7</fullName>
                    <label>CA</label>
                </value>
                <value>
                    <fullName>8</fullName>
                    <label>CO</label>
                </value>
                <value>
                    <fullName>9</fullName>
                    <label>CT</label>
                </value>
                <value>
                    <fullName>10</fullName>
                    <label>DC</label>
                </value>
                <value>
                    <fullName>11</fullName>
                    <label>DE</label>
                </value>
                <value>
                    <fullName>12</fullName>
                    <label>FL</label>
                </value>
                <value>
                    <fullName>13</fullName>
                    <label>FM</label>
                </value>
                <value>
                    <fullName>14</fullName>
                    <label>GA</label>
                </value>
                <value>
                    <fullName>15</fullName>
                    <label>GU</label>
                </value>
                <value>
                    <fullName>16</fullName>
                    <label>HI</label>
                </value>
                <value>
                    <fullName>17</fullName>
                    <label>IA</label>
                </value>
                <value>
                    <fullName>18</fullName>
                    <label>ID</label>
                </value>
                <value>
                    <fullName>19</fullName>
                    <label>IL</label>
                </value>
                <value>
                    <fullName>20</fullName>
                    <label>IN</label>
                </value>
                <value>
                    <fullName>21</fullName>
                    <label>KS</label>
                </value>
                <value>
                    <fullName>22</fullName>
                    <label>KY</label>
                </value>
                <value>
                    <fullName>23</fullName>
                    <label>LA</label>
                </value>
                <value>
                    <fullName>24</fullName>
                    <label>MA</label>
                </value>
                <value>
                    <fullName>25</fullName>
                    <label>MD</label>
                </value>
                <value>
                    <fullName>26</fullName>
                    <label>ME</label>
                </value>
                <value>
                    <fullName>27</fullName>
                    <label>MH</label>
                </value>
                <value>
                    <fullName>28</fullName>
                    <label>MI</label>
                </value>
                <value>
                    <fullName>29</fullName>
                    <label>MN</label>
                </value>
                <value>
                    <fullName>30</fullName>
                    <label>MO</label>
                </value>
                <value>
                    <fullName>31</fullName>
                    <label>MP</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClientZip__c</fullName>
        <label>Client Zip</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>9902 Client</relationshipLabel>
        <relationshipName>X9902_Client1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X9902ReportingQuarter__c</fullName>
        <label>9902 Reporting Quarter</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2</fullName>
                    <label>Qtr1</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Qtr2</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Qtr3</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Qtr4</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X9902__c</fullName>
        <label>9902</label>
        <referenceTo>X9902__c</referenceTo>
        <relationshipLabel>9902 Client</relationshipLabel>
        <relationshipName>X9902_Client</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>9902 Client</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>99-{00000}</displayFormat>
        <label>9902 Client ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>9902 Client</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>